# ai-infrastructure-engineering

./: .gitignore  CONTRIBUTING.md  README.md
00-roadmap/: README.md  assessment-framework.md  difficulty-levels.md  knowledge-graph.md  learning-paths.md  module-catalog.md  progress.md
01-ai-foundations/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
02-python-for-ai/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
02-python-for-ai/labs/02.3-packaging-repro-env/: Dockerfile  README.md  pyproject.toml
02-python-for-ai/labs/02.3-packaging-repro-env/src/service/: __init__.py  app.py
02-python-for-ai/labs/02.3-packaging-repro-env/tests/: test_service.py
03-machine-learning-fundamentals/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
04-deep-learning/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
05-transformers/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
06-llms/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
07-prompt-engineering/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
08-embeddings/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
09-vector-databases/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
10-rag/: README.md  best-practices.md  checklists.md  common-pitfalls.md  troubleshooting.md
(+235 files in other folders)
