[project]
name = "repro-svc"
version = "0.1.0"
description = "Lab 02.3 — reproducible, locked, slim-container ML service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "numpy==1.26.4",
    "pydantic==2.7.4",
]

[dependency-groups]
dev = [
    "pytest==8.2.2",
    "httpx==0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/service"]
